# regcp

./: README.md  pyproject.toml
notebooks/: demo.ipynb
src/: regcp.py
