[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default

[project]
name = "regcp"
version = "0.0.0"
requires-python = ">= 3.9"
authors = [
  {name = "Maximilian Hoffmann", email = "mh@posteo.de"},]
dependencies = [
  'ruamel.yaml','sparse'
]