[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project]
name = "regcp"
version = "0.0.1"
requires-python = ">= 3.9"
authors = [
  {name = "Maximilian Hoffmann", email = "mh@posteo.de"},
]
dependencies = [
  "cupy",
  "numpy",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]